--- a/index.html
+++ b/index.html
@@ -98,22 +98,23 @@
                 </button>
                 <ul class="ctg_depth overflow-y-scroll" style="height: 400px;">
                     <li><span style="color:#ffcf02;">FOOD</span></li>
-                    <li><a href="#">아니</a></li>
-                    <li><a href="#">그렇게</a></li>
-                    <li><a href="#">많이</a></li>
-                    <li><a href="#">쳐</a></li>
-                    <li><a href="#">먹고</a></li>
-                    <li><a href="#">또</a></li>
-                    <li><a href="#">뭘</a></li>
-                    <li><a href="#">잡수실려고</a></li>
-                    <li><a href="#">쇼핑을</a></li>
-                    <li><a href="#">하고</a></li>
-                    <li><a href="#">계신</a></li>
-                    <li><a href="#">건지</a></li>
-                    <li><a href="#">변명</a></li>
-                    <li><a href="#">말고</a></li>
-                    <li><a href="#">설명</a></li>
-                    <li><a href="#">해봐</a></li>
+                    <li><a href="#">과일</a></li>
+                    <li><a href="#">채소</a></li>
+                    <li><a href="#">쌀/잡곡/견과</a></li>
+                    <li><a href="#">정육/계랸류</a></li>
+                    <li><a href="#">수산물/건해산</a></li>
+                    <li><a href="#">우유/유제품</a></li>
+                    <li><a href="#">밀키트/간편식</a></li>
+                    <li><a href="#">김치/반찬/델리</a></li>
+                    <li><a href="#">생수/음료/주류</a></li>
+                    <li><a href="#">커피/원두/차</a></li>
+                    <li><a href="#">면류/통조림</a></li>
+                    <li><a href="#">앙념/오일</a></li>
+                    <li><a href="#">과자/간식</a></li>
+                    <li><a href="#">베이커리/잼</a></li>
+                    <li><a href="#">건강식품</a></li>
+                    <li><a href="#">친환경/유기농</a></li>
+                    <li><span style="color:#ffcf02;">LIFE</span></li>
                 </ul>
 
             </div>
@@ -164,7 +165,7 @@
 
 
     <div class="mx-auto my-auto">
-        <div class="owl-carousel p-0" id="banner-carousel">
+        <div class="owl-carousel p-0" id="banner-carousel" style="z-index: -1;">
             <div class="item">
                 <img class="rounded-5" src="resource/img/carousel1.avif" style="width: 800px; height: 420px;">
             </div>
